--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
             scene.addEventListener('mouseleave', () => card.style.transform = 'none');
             
             document.getElementById('share-btn').addEventListener('click', () => {
-               window.open(`https://twitter.com/intent/tweet?text=${encodeURIComponent("I've secured my Validator Node on BULK Testnet.\n\nInfinite Markets. One Exchange.\n\nGet yours:")}&url=bulkcard.lol`);
+               window.open(`https://twitter.com/intent/tweet?text=${encodeURIComponent("I've secured my Validator Node for @bulktrade Testnet.\n\nInfinite Markets. One Exchange.\n\nGet yours:")}&url=bulkcard.lol`);
             });
             document.getElementById('reset-btn').addEventListener('click', () => location.reload());
         });
